bit hardening openapi schema
